--- a/html/index.html
+++ b/html/index.html
@@ -7,11 +7,17 @@
 </head>
 <body>
     <h1>Alex Jesus</h1>
-    <p>Eu me chamo Alex Silva de Jesus, tenho 20 anos, moro numa cidade chamda Ipirá, pequeno município localizado no estado da Bahia.</p>
     <p>
+        Eu me chamo Alex Silva de Jesus, tenho 20 anos, moro numa cidade chamda Ipirá, pequeno município localizado no estado da Bahia.
         Atualmente estou cursando Análise e Desenvolvimento de Sistemas pela universidade da UNINTER. Trabalho durante o dia numa loja,
         porém não é na minha área de estudo e formação. Nas horas vagas, estudo um pouco de programação, focado na lingugem C e ainda estou
-        desenvolvendo um projeto de um caixa eletrônico simples, utilizando a linguagem C e que está disponível no meu Github.
+        desenvolvendo um projeto de um caixa eletrônico simples, utilizando a linguagem C e que está disponível no meu Github. Futuramente, 
+        quero estar formado e talvez concursado, atingindo o meu objetivo, ser um dev pra gringa em Home Office, ou seja, trabalhar de casa.
     </p>
+    <ul>
+        <li>Escrever códigos</li>
+        <li>Jogar futebol</li>
+        <li>Treinar na academia</li>
+    </ul>
 </body>
 </html>
