--- a/html/index.html
+++ b/html/index.html
@@ -14,10 +14,25 @@
         desenvolvendo um projeto de um caixa eletrônico simples, utilizando a linguagem C e que está disponível no meu Github. Futuramente, 
         quero estar formado e talvez concursado, atingindo o meu objetivo, ser um dev pra gringa em Home Office, ou seja, trabalhar de casa.
     </p>
+
+    <h2>Hobbies</h2>
     <ul>
         <li>Escrever códigos</li>
         <li>Jogar futebol</li>
         <li>Treinar na academia</li>
     </ul>
+
+    <table>
+        <tr>
+            <th>boston</th>
+            <th>italy</th>
+            <th>south africa</th>
+        </tr>
+        <tr>
+            <td>boston</td>
+            <td>italy</td>
+            <td>south africa</td>
+        </tr>
+    </table>
 </body>
 </html>
