--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex Developer</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <h1>Alex Jesus</h1>
@@ -24,14 +25,22 @@
 
     <table>
         <tr>
-            <th>boston</th>
-            <th>italy</th>
-            <th>south africa</th>
+            <th>Países</th>
         </tr>
         <tr>
-            <td>boston</td>
-            <td>italy</td>
-            <td>south africa</td>
+            <td>João</td>
+            <td>25</td>
+            <td>Engenheiro</td>
+        </tr>
+        <tr>
+            <td>Maria</td>
+            <td>30</td>
+            <td>Designer</td>
+        </tr>
+        <tr>
+            <td>Carlos</td>
+            <td>28</td>
+            <td>Professor</td>
         </tr>
     </table>
 </body>
