--- a/html/index.html
+++ b/html/index.html
@@ -9,11 +9,16 @@
 <body>
     <h1>Alex Jesus</h1>
     <p>
-        Eu me chamo Alex Silva de Jesus, tenho 20 anos, moro numa cidade chamda Ipirá, pequeno município localizado no estado da Bahia.
-        Atualmente estou cursando Análise e Desenvolvimento de Sistemas pela universidade da UNINTER. Trabalho durante o dia numa loja,
-        porém não é na minha área de estudo e formação. Nas horas vagas, estudo um pouco de programação, focado na lingugem C e ainda estou
-        desenvolvendo um projeto de um caixa eletrônico simples, utilizando a linguagem C e que está disponível no meu Github. Futuramente, 
-        quero estar formado e talvez concursado, atingindo o meu objetivo, ser um dev pra gringa em Home Office, ou seja, trabalhar de casa.
+        Eu me chamo Alex Silva de Jesus, tenho 20 anos, moro numa cidade chamda 
+        Ipirá, pequeno município localizado no estado da Bahia.
+        Atualmente estou cursando Análise e Desenvolvimento de Sistemas pela 
+        universidade da UNINTER. Trabalho durante o dia numa loja,
+        porém não é na minha área de estudo e formação. Nas horas vagas, 
+        estudo um pouco de programação, focado na lingugem C e ainda estou
+        desenvolvendo um projeto de um caixa eletrônico simples, utilizando a 
+        linguagem C e que está disponível no meu Github. Futuramente, 
+        quero estar formado e talvez concursado, atingindo o meu objetivo, ser
+        um dev pra gringa em Home Office, ou seja, trabalhar de casa.
     </p>
 
     <h2>Hobbies</h2>
@@ -22,25 +27,29 @@
         <li>Jogar futebol</li>
         <li>Treinar na academia</li>
     </ul>
-
-    <table>
+    <h2>Países que eu gostaria de visitar</h2>
+    <p>
+        Aqui está alguns países que eu gostaria de visitar e 
+        uma breve descrição do motivo.
+    </p>
+    <table id="paises">
         <tr>
-            <th>Países</th>
+            <td classe="titulos" colspan=15>ex</td>
+            <td colspan=15>
+                <img src="../imagens/boston.jpeg" alt="EUA,  Boston"">
+            </td>
         </tr>
         <tr>
-            <td>João</td>
-            <td>25</td>
-            <td>Engenheiro</td>
+            <td classe="titulos" colspan=10>ex</td>
+            <td>
+                <img src="../imagens/safari.jpeg" alt="África do Sul, África do Sul">
+            </td>
         </tr>
         <tr>
-            <td>Maria</td>
-            <td>30</td>
-            <td>Designer</td>
-        </tr>
-        <tr>
-            <td>Carlos</td>
-            <td>28</td>
-            <td>Professor</td>
+            <td classe="titulos" colspan=10>ex</td>
+            <td colspan=10>
+                <img src="../imagens/roma.jpeg" alt="">
+            </td>
         </tr>
     </table>
 </body>
