--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Alex Jesus</h1>
-    <p>
+    <p id="descricao">
         Eu me chamo Alex Silva de Jesus, tenho 20 anos, moro numa cidade chamda 
         Ipirá, pequeno município localizado no estado da Bahia.
         Atualmente estou cursando Análise e Desenvolvimento de Sistemas pela 
@@ -27,30 +27,42 @@
         <li>Jogar futebol</li>
         <li>Treinar na academia</li>
     </ul>
-    <h2>Países que eu gostaria de visitar</h2>
+    <h2>Países</h2>
     <p>
-        Aqui está alguns países que eu gostaria de visitar e 
-        uma breve descrição do motivo.
+        Aqui está alguns países que eu gostaria de visitar.
     </p>
-    <table id="paises">
+    <table id="paises" colspan=30>
         <tr>
-            <td classe="titulos" colspan=15>ex</td>
+            <td classe="titulos" colspan=15>
+                <p>EUA, Boston</p>
+            </td>
             <td colspan=15>
-                <img src="../imagens/boston.jpeg" alt="EUA,  Boston"">
+                <img src="../imagens/boston.jpeg" alt="EUA, Boston">
             </td>
         </tr>
         <tr>
-            <td classe="titulos" colspan=10>ex</td>
-            <td>
+            <td classe="titulos" colspan=15>
+                <p>
+                    África do Sul, Capital
+                </p>
+            </td>
+            <td colspan=15>
                 <img src="../imagens/safari.jpeg" alt="África do Sul, África do Sul">
             </td>
         </tr>
         <tr>
-            <td classe="titulos" colspan=10>ex</td>
-            <td colspan=10>
+            <td classe="titulos" colspan=15>
+                <p>Itália, Roma</p>
+            </td>
+            <td colspan=15>
                 <img src="../imagens/roma.jpeg" alt="">
             </td>
         </tr>
     </table>
+    <p><a href="https://github.com/developerinalex" target="_blank">Meu Github</a></p>
+    <button id="botao">
+        <p>Clique</p>
+    </button>
+    <script src="../javascript/script.js"></script>
 </body>
 </html>
