--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li>Jogar futebol</li>
         <li>Treinar na academia</li>
     </ul>
+    <img src="imagens/codigo.jpeg" alt="Hobbie de escrever códigos" id="hobbie">
     <h2>Países</h2>
     <p>
         Aqui está alguns países que eu gostaria de visitar.
@@ -37,7 +38,7 @@
                 <p>EUA, Boston</p>
             </td>
             <td colspan=15>
-                <img src="../imagens/boston.jpeg" alt="EUA, Boston">
+                <img src="imagens/boston.jpeg" alt="EUA, Boston">
             </td>
         </tr>
         <tr>
@@ -47,7 +48,7 @@
                 </p>
             </td>
             <td colspan=15>
-                <img src="../imagens/safari.jpeg" alt="África do Sul, África do Sul">
+                <img src="imagens/safari.jpeg" alt="África do Sul, África do Sul">
             </td>
         </tr>
         <tr>
@@ -55,7 +56,7 @@
                 <p>Itália, Roma</p>
             </td>
             <td colspan=15>
-                <img src="../imagens/roma.jpeg" alt="">
+                <img src="imagens/roma.jpeg" alt="">
             </td>
         </tr>
     </table>
