--- a/index.html
+++ b/index.html
@@ -65,5 +65,8 @@
         <p>Clique</p>
     </button>
     <script src="javascript/script.js"></script>
+    <span id="content">
+        <p id="mensagem"></p>
+    </span>
 </body>
 </html>
