--- a/index.html
+++ b/index.html
@@ -61,9 +61,7 @@
         </tr>
     </table>
     <p><a href="https://github.com/developerinalex" target="_blank">Meu Github</a></p>
-    <button id="botao">
-        <p>Clique</p>
-    </button>
+    <button id="botao">Clique aqui!</button>
     <script src="javascript/script.js"></script>
     <span id="content">
         <p id="mensagem"></p>
