--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <p><a href="https://github.com/developerinalex" target="_blank">Meu Github</a></p>
     <button id="botao">Clique aqui!</button>
     <script src="javascript/script.js"></script>
-    <span id="content">
+    <span class="content">
         <p id="mensagem"></p>
     </span>
 </body>
