--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <h1>Alex Jesus</h1>
     <p id="descricao">
-        Eu me chamo Alex Silva de Jesus, tenho 20 anos, moro numa cidade chamda 
+        Eu me chamo Alex Silva de Jesus, tenho 20 anos, moro numa cidade chamada 
         Ipirá, pequeno município localizado no estado da Bahia.
         Atualmente estou cursando Análise e Desenvolvimento de Sistemas pela 
         universidade da UNINTER. Trabalho durante o dia numa loja,
         porém não é na minha área de estudo e formação. Nas horas vagas, 
-        estudo um pouco de programação, focado na lingugem C e ainda estou
+        estudo um pouco de programação, focado na linguagem C e ainda estou
         desenvolvendo um projeto de um caixa eletrônico simples, utilizando a 
         linguagem C e que está disponível no meu Github. Futuramente, 
         quero estar formado e talvez concursado, atingindo o meu objetivo, ser
